🚧 Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -1,6 +1,7 @@
 .global-footer {
   padding: 32px 0 40px;
   background-color: $background;
+  margin-bottom: $order-cta-height;
 
   &-title {
     @include text-style(13, $dark);
